--- a/main.html
+++ b/main.html
@@ -12,8 +12,28 @@
     <div class="container">
       <div class="jumbotron">
         <h1>Tic Tac Toe</h1>
+        <p>Get are ready to play!</p>
+        <button id='button-restart' type="button" class="btn btn-primary" name="button">Restart!</button>
       </div>
     </div>
+
+    <table align='center'>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+        <tr/>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+        <tr/>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+        <tr/>
+    </table>
 
     <script type="text/javascript" src='script.js'></script>
 
